Fix tagline misalignment (3)

--- a/styles/content.styl
+++ b/styles/content.styl
@@ -802,7 +802,7 @@
                 background-image url('flairsheet2x')
                 
             .link &
-                margin-top 1px
+                margin-top 0
                 
         else
             margin 0
